framework/versions/1.2.0/GOVERNANCE.md
# 多会话协作治理 v1.2.0

## 1. 适用模型

框架采用“一个主控、三个基础专业分管、按需启用专项分管与执行会话”。美术/渲染、架构/核心逻辑、游戏设计是基础专业域；当项目存在正式平台、构建、账号、测试包或发行链时，可启用平台/发行工程分管。角色是责任边界，不是必须常驻的会话；没有对应工作时，不为填满组织图而启动会话。

共同原则：

1. 项目权威文档和已验证代码是事实来源，聊天、摘要、归档和模型记忆只提供线索。
2. 一项任务只有一个写入负责人、一个明确审核人、一组精确文件所有权和一个 Git 收口者。
3. 先建立事实、理论与影响范围，再设计、实现、验证；优先修根因，不以兼容分支掩盖错误抽象。
4. 方案、实现、审核、合入和运行验证是不同状态；测试通过不能单独证明设计正确或新增行为已覆盖。
5. 不覆盖、回退、暂存其他会话或用户的并行改动。
6. 所有发现都必须分类和路由，但不要求当前任务无限扩张去修复全部历史问题。
7. 面向用户的结论使用简体中文；术语、代码标识和命令可以保留原文并在首次出现时解释。

## 2. 角色与权限

| 角色 | 默认资源 | 核心责任 | 默认批准权 | 禁止越位 |
|---|---|---|---|---|
| 主控 | R3 战略级 | 项目目标、跨域取舍、阶段门、任务路由、冲突仲裁、全局状态 | 跨域变更、阶段切换、路线变化、分管争议 | 替分管重复日常审核、长期承担执行 |
| 美术/渲染分管 | R3 战略级 | 视觉方向、资产规范、渲染表现/性能、任务拆分与验收 | 本域常规方案和实现 | 重定义游戏规则或核心架构 |
| 架构/核心逻辑分管 | R3 战略级 | 架构边界、模拟核心、AI/规则/数据流、测试策略 | 本域常规方案和实现 | 单方面改变产品体验目标 |
| 游戏设计分管 | R3 战略级 | 核心体验、机制契约、数值意图、关卡/商业化/可读性 | 本域常规方案和文档 | 越过架构分管指定危险实现 |
| 平台/发行工程分管（按需） | R3 战略级 | 平台工具链、SDK/runtime 版本、构建与发行产物、平台适配集成、包体/生命周期/兼容性、账号与测试版本流程、发行准备 | 已授权平台任务内的常规方案、执行拆分和审核 | 选择产品平台或引擎；改变 Core/玩法/渲染公共契约；未经授权接受协议、登录/绑定、创建 AppID、上传、提审或发布 |
| 执行会话 | R1，必要时 R2 | 按任务卡调查、实现、验证和交接 | 无最终批准权 | 扩大范围、改变路线、自批 |

R1/R2/R3 是能力等级，不绑定厂商或模型名。用户选择具体模型和推理等级；任务风险变化时由分管建议升级。

## 3. 决策与问题路由

- 本域、可逆、无公共契约变化：分管审核批准即可合入，主控接收摘要。
- 跨两个及以上领域、公共契约、路线/阶段门、不可逆风险或分管争议：分管先给证据，主控决定。
- 产品目标、商业取舍、重大删改、发布及其他需新授权的动作：主控整理选项与代价，用户决定。
- 外部状态动作逐级路由：只读盘点可由分管常规批准；下载、安装、接受许可协议、登录/绑定、创建或使用 AppID、设备授权、上传测试包、提审和正式发布分别记录授权。前一步不自动授权后一步，正式发布始终由用户决定。
- Bug 归属明确时直接交对应分管；归属不清或跨域时交主控。分管创建任务并指定执行和审核。
- 审核不是常驻独立部门。通常由分管审核；高风险、争议、连续复发或上下文污染时增加一次性独立审核。

## 4. 任务生命周期

```text
BACKLOG → READY → IN_PROGRESS → REVIEW → APPROVED → MERGED → VERIFIED → CLOSED
                           ↘ CHANGES_REQUESTED ↗
任意进行中状态 → BLOCKED / CANCELLED
```

任务卡至少包含：目标、非目标、权威输入、前置事实、风险四维、负责人、审核人、Git 收口者、文件所有权、外部动作授权、选用评审视角、验收与验证、关系图影响、交接产物。

- `READY`：输入、权限和边界足够执行。
- `REVIEW`：执行者停止扩大修改，提交实际差异与证据。
- `APPROVED`：审核通过，但尚不等于已提交或运行验证。
- `VERIFIED`：合入后的规定测试/运行/视觉检查完成。

## 5. 文件加载分层

所有会话先读项目 `BOOTSTRAP.md`。其余按职责加载：

| 文件 | 主控 | 分管/审核人 | 执行会话 |
|---|---|---|---|
| `GOVERNANCE.md` | 全文 | 全文 | 职责、任务、Git 章节 |
| `WORKFLOW_PLAYBOOK.md` | 相关章节 | 全文 | 与任务风险相关章节 |
| `REVIEW_CHECKLIST.md` | 阶段门相关章节 | 全文 | 用于自检，不能自批 |
| `PERSPECTIVE_LENSES.md` | 跨域决策时 | 按任务选择 | 仅任务卡要求时 |
| 项目 `PROJECT/STATUS` | 全文 | 全文 | 相关部分 |
| 任务卡和其权威输入 | 相关任务 | 全文 | 全文 |

摘要只能做导航，不能替代任务卡指定的原文。

## 6. 风险与审核深度

风险不只看行数，同时评估影响范围、行为复杂度、依赖数量和运行时可观察性。具体方法见 `REVIEW_CHECKLIST.md`。

- 轻：局部、可逆、无状态机/公共契约变化；分管可精简审核。
- 中：跨文件/模块、改变行为或新增状态；需要影响分析、直接测试和完整分管审核。
- 重：跨域、公共契约、持久状态/生命周期、核心循环、平台/runtime 迁移、账号/AppID 状态、上传/提审/发布或不可逆变更；方案先审，分管完整审核后再过主控阶段门，按需独立盲审。

独立审核只拥有指定审核维度，没有默认写入权。审核人若做了实质修改，必须由另一名合格审核者完成最终批准。

## 7. 外部工具、账号与发行状态

平台/发行任务必须把“本地文件变化”和“外部系统状态变化”分别记录：

1. 工具、SDK、引擎和安装包绑定官方来源、精确版本、下载时间、字节数、哈希；平台可提供签名时还要核验签名。
2. 下载目录、安装目录、缓存目录、项目工程和构建产物应分离，并记录空间上限、清理方式和可复用边界。
3. 许可协议、登录、账号绑定、AppID、团队角色、测试设备和上传版本都属于外部状态；任务卡必须写明授权范围、当前状态和负责人，治理文档不得保存密码、令牌或私钥。
4. 本地构建成功、测试版本可运行、审核通过和正式发布是不同阶段；不得用前一状态推定后一状态。
5. 候选工具链或引擎实验优先放在隔离、可回收的 PoC 工程中；进入生产导入图、改正式资产合同或迁移正式工程必须另过主控阶段门。

## 8. Git 与并行写入

共享本地仓库默认不为每个会话创建分支或独立 index，以减少合并和切换成本：

1. 不同执行会话不得同时写同一文件；任务卡列出精确所有权。
2. 同一仓库同一时刻只允许一个 Git 收口者操作 index/commit。
3. 收口前检查 `HEAD`、`git status`、工作区和暂存区差异；只暂存任务路径，脏工作树禁止 `git add .`。
4. 不得覆盖、回退或纳入其他会话改动；不得用 `assume-unchanged`/`skip-worktree` 隐藏差异。
5. commit、push、发布、删除和回退是不同授权；提交不自动授权 push。

仅在文件所有权不可避免重叠、长周期实验、候选方案并行或主工作树必须保持可发布时使用 branch/worktree。分管必须先指定集成负责人和合并顺序。

## 9. 委派与独立性

可以把边界清楚、可独立验证且写入范围互斥的工作委派给执行会话或短期辅助代理。总体方案、未批准取舍、强耦合核心逻辑、脏工作树整合和最终审核仍由负责角色承担。委派输出是证据输入，不自动成为事实。

多个提示词角色由同一个模型在同一上下文中顺序模拟，不构成真正独立审核。独立性来自新上下文、独立取证、不同审核者和可复核证据，不来自角色名称。

## 10. 会话交接与关闭

- 接近上下文极限、长期停顿或换模型时，更新任务卡：完成项、实际差异、证据、验证、未完成、风险和下一条允许动作。
- 新会话从 Bootstrap、项目状态和任务卡恢复，不依赖旧聊天摘要猜测。
- 被替换会话停止写入；稳定结论进入项目权威/项目资料，过程信息进入任务卡，历史原文只读归档。
- 老项目首次接入可做一次迁移；新项目不创建旧会话迁移流程。

## 11. 质量底线

- 搜索建立注意力地图，再按风险完整读取相关对象并复述“为什么”。
- 中/重型任务先做 pre-mortem；重构先确认安全网，新行为必须有直接覆盖。
- 公共概念只有一个权威来源；任务摘要只给指针。
- 修改需有机融入现有结构，检查重叠、冲突和整体自洽。
- 功能/契约变化同步受影响的权威文档、开发日志、任务状态和必要关系图；不做无关全面同步。
- 正式文档不引用临时聊天编号或临时方案作为权威依据。
